--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <style>
         body {
             font-family: 'Muli';
-            background-color: #546479; /*  #6C809A; #2D93AD;*/
+            background-color: #6C809A; /*  #6C809A; #2D93AD;*/
             color: #B5FFE1;
         }
 
