--- a/index.html
+++ b/index.html
@@ -94,9 +94,11 @@
             <div class="flex-item">
                 <h1 style="font-family: 'Space Mono'; color: #FF9F29;">
                     Sunny Yun Zhao
-                    <img src="sunlogo.png" alt="OSM Extraction." style="max-height: 2em;"></a>
+                    <img src="sunlogo.png" alt="OSM Extraction." style="max-height: 2em;">
+                    <span style="font-size: x-small;">TM</span></a>
                 </h1>
-                <h3>Spatial Data Analyst</h3>
+                <p>Spatial Data Analyst based in the Los Angeles area. <br>
+                    Click on <span style="color: #FF9F29;">orange links</span> to explore my projects.</p>
             </div>
             <div class="flex-item" style="display: flex; justify-content: flex-end; margin-top: 3%;">
                 <a href="https://github.com/sunny-netizen" target="_blank" rel="noopener noreferrer"
@@ -115,6 +117,7 @@
             <h2 style="margin: 5% 7% 1% 7%;">Past Projects</h2>
             <hr>
             <div class="flex-container">
+                
                 <div class="flex-item"> <!--style="border: 5px solid lightcoral;"-->
                     <h3>Street Networks</h3>
                     <img src="cityoflondon.png" alt="">
@@ -125,18 +128,16 @@
                     <p>It was a main data source for my
                         <a href="https://drive.google.com/file/d/1-b3OS6ndkVY3ApoPFUiPRAA1cJQ0YHWE/view?usp=sharing"
                             target="_blank"> masters dissertation</a>,
-                        where I evaluated the correspondence between hierarchical structure in the road network of
-                        Europe and human geography.
-                    </p>
-                    <p>The Python library OSMnx enabled <a
-                            href="https://sunny-netizen.github.io/osmnxdemo/">extracting</a>
-                        the road system of Europe from OpenStreetMap as a network graph.
-                        <a href="https://sunny-netizen.github.io/portfolio/html/london.html" target="_blank">Percolation
-                            analysis</a>
-                        on the road network yielded hierarchical clusters that could be modelled
-                        as a <a href="https://sunny-netizen.github.io/portfolio/html/tree.html"
-                            target="_blank">dendrogram</a>.
-                        Phenetic analysis and correlational statistics revealed weak relationships.
+                        where I revealed weak relationships between hierarchical structure in the road network of
+                        Europe and human geographies by:
+                        <ul>
+                            <li>Extracting the road system of Europe from OpenStreetMap as a network graph with 
+                            <a href="https://sunny-netizen.github.io/osmnxdemo/">Python library OSMnx</a>.</li>
+                            <li>Detecting hierarchical clusters with <a href="https://sunny-netizen.github.io/portfolio/html/london.html" target="_blank">Percolation
+                                analysis</a>, a form of unsupervised machine learning.</li>
+                            <li>Constructing a a <a href="https://sunny-netizen.github.io/portfolio/html/tree.html"
+                                target="_blank">dendrogram</a> from the clusters and conducting phenetic analysis.</li>
+                        </ul>
                     </p>
                 </div>
 
@@ -146,8 +147,8 @@
                         Watershed.</i></a>
                     <p>Ballona Creek is a channelized waterway running through
                         southwestern Los Angeles County into the Pacific Ocean.</p>
-                    <p>As a CivicSpark Fellow with the City of Culver City, I built capacity for
-                        climate resilience and sustainability, including:
+                    <p>Climate resilience and sustainability were my focus
+                        as a CivicSpark Fellow with the City of Culver City. I built capacity for:
                     <ul>
                         <li><a href="https://drive.google.com/file/d/1CUIFNosLYTTdVv5Hyr336JDj4J1zbEHc/view?usp=drive_link"
                                 target="_blank">Ballona Creek Revitalization Project</a></li>
@@ -155,19 +156,17 @@
                         <li>Augmented Reality (AR) Stormwater Construction Educational Outreach</li>
                     </ul>
                     </p>
-                    <p>This experience inspired me to write a <a
-                            href="https://infogr8.com/sunny-zhao-local-governments-climate-action/" target="_blank">blog
-                            post</a>
-                        I wrote on data and climate action in local government, including a
+                    <p>Following this experience I created a
+                        <a href="https://infogr8.com/sunny-zhao-local-governments-climate-action/" target="_blank">blog post</a>
+                        on data and climate action in local government and a
                         <a href="https://sunny-netizen.github.io/GHG/" target="_blank">Sankey Diagram</a>.
                     </p>
-                    <p>My local involvement continued with a local nonprofit, Ballona Creek Renaissance.
+                    <p>My local involvement continued with Ballona Creek Renaissance, an environmental nonprofit.
                         I created an Esri ArcGIS <a href="https://arcg.is/08iCWq" target="_blank">StoryMap</a> for their
                         outreach
                         developed virtual drone footage for a
                         <a href="https://www.ccusd.org/apps/video/watch.jsp?v=356882" target="_blank">watershed
-                            sustainability video</a>
-                        they funded.
+                            sustainability video</a>.
                 </div>
 
                 <div class="flex-item">
@@ -175,14 +174,14 @@
                     <img src="button-exomap.png" alt="OSM Extraction." target="_blank"><i>Number of exoplanets orbiting
                         host stars.</i></a>
                     <p>Exoplanets or extrasolar planets are planets that orbit stars beyond our solar system.</p>
-                    <p>Inspired by star maps and my own experience with observing exoplanets,
+                    <p>Inspired by star maps,
                         I created a <a href="https://sunny-netizen.github.io/exomap/" target="_blank">map of
                             exoplanets</a>
                         using data from the NASA Exoplanet Archive. This map is intended for stargazers
                         wishing to know which stars are orbited by confirmed exoplanets.</p>
-                    <p>The NASA Exoplanet Archive helped me again to make a
-                        <a href="https://sunny-netizen.github.io/midnightgospel/" target="_blank">version</a> of
-                        Clancy's Multiverse Simulator from the TV show, Midnight Gospel.
+                    <p>I used the same data source to create 
+                        <a href="https://sunny-netizen.github.io/midnightgospel/" target="_blank">fictional worlds</a> 
+                        based on <i>The Midnight Gospel</i>.
                     </p>
                 </div>
             </div>
