--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </figure>
             <div class="name">
                 <h1>Sunny Yun Zhao</h1>
-                <h3 style="margin-top: -0.5em;">Spatial Data Analyst based in the Los Angeles area.</h3>
+                <h3 style="margin-top: -0.5em;">Spatial Data Analyst based near Los Angeles.</h3>
             </div>
         </div>
         <div class="contact">
