--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
             </article>
             <article>
-                <h3>Stars and Planets</h3>
+                <h3>Star- and Planet-gazing</h3>
                 <img src="button-exomap.png" alt="OSM Extraction." target="_blank">
                 <figcaption><i>Number of exoplanets orbiting host stars.</i></figcaption>
                 <!--<p>Exoplanets or extrasolar planets are planets that orbit stars beyond our solar system.</p>-->
