--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <i class="fa-solid fa-circle-info"></i>-->
                 <p> My <a href="https://drive.google.com/file/d/1-b3OS6ndkVY3ApoPFUiPRAA1cJQ0YHWE/view?usp=sharing"
                         target="_blank"> masters dissertation</a> revealed weak relationships between
-                    hierarchical structure in the road network of Europe and human geography.</p>
+                    hierarchical structure in the road network of Europe and human geography:</p>
 
                 <p>I <a href="https://sunny-netizen.github.io/osmnxdemo/">extracted</a> OpenStreetMap data as a network
                     graph
@@ -84,14 +84,14 @@
                 <!--<p>Exoplanets or extrasolar planets are planets that orbit stars beyond our solar system.</p>-->
                 <p>Inspired by star maps,
                     I created a <a href="https://sunny-netizen.github.io/exomap/" target="_blank">
-                        map of exoplanets</a> using data from the NASA Exoplanet Archive.</p>
+                        night sky map of exoplanets</a> using data from the NASA Exoplanet Archive.</p>
                 <p>The same data source was used to create
                     <a href="https://sunny-netizen.github.io/midnightgospel/" target="_blank">fictional worlds</a>
                     based on <i>The Midnight Gospel</i>.
                 </p>
             </article>
             <article>
-                <h3>Glaciers</h3>
+                <h3>Glaciers and Pika</h3>
                 <img src="glaciers.png" alt="OSM Extraction." target="_blank"><i></i></a>
                 <p>Currently <a
                         href="https://sunny-netizen.github.io/GLIMS/glims_notebooks/introglims.html">exploring </a>
