--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </figure>
             <div class="name">
                 <h1>Sunny Yun Zhao</h1>
-                <h3 style="margin-top: -0.5em;">Spatial Data Analyst based near Los Angeles.</h3>
+                <h3 style="margin-top: -0.5em;">Spatial Data Analyst based near Los Angeles</h3>
             </div>
         </div>
         <div class="contact">
@@ -73,9 +73,8 @@
 
                 <p>Joining the Advisory Council of Ballona Creek Renaissance,
                     I created an Esri ArcGIS <a href="https://arcg.is/08iCWq" target="_blank">StoryMap</a>
-                    for outreach and developed a map animation for an
-                    <a href="https://www.ccusd.org/apps/video/watch.jsp?v=356882" target="_blank">educational video</a>.
-
+                    for outreach and developed a <a href="sunny-netizen.github.io/Watershed/">map animation</a> for an
+                    <a href="https://www.ccusd.org/apps/video/watch.jsp?v=356882" target="_blank">educational video</a>.</p>
             </article>
             <article>
                 <h3>Star- and Planet-gazing</h3>
