--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </figure>
             <div class="name">
                 <h1>Sunny Yun Zhao</h1>
-                <h3 style="margin-top: -0.5em;">Spatial Data Analyst based near Los Angeles</h3>
+                <h2 style="margin-top: -0.5em;">GIS & Data Analyst</h3>
             </div>
         </div>
         <div class="contact">
@@ -32,26 +32,26 @@
         <hr>
         <p>Click <span class="legend">links</span> and <a href=""><i class="fa-solid fa-code"></i></a>
             to explore visualizations and code. Hover over
-            <i class="fa-solid fa-circle-info"></i> for definitions.
+            <i class="fa-solid fa-circle-info"></i> for details.
         </p><br>
         <section>
             <article>
                 <h3>Cities and Road Networks</h3>
                 <img src="cityoflondon.png" alt="">
-                <figcaption><i>Street network of the City of London extracted from OpenStreetMap.</i></figcaption>
+                <figcaption><i>Street network of the City of London; example extraction from OpenStreetMap.</i></figcaption>
                 <!--<p>OpenStreetMap is an open-source geographic database of the planet,
                     maintained through a volunteer-driven collaboration.</p> unsupervised machine learning.
                 <i class="fa-solid fa-code"></i> 
             <i class="fa-solid fa-circle-info"></i>-->
                 <p> My <a href="https://drive.google.com/file/d/1-b3OS6ndkVY3ApoPFUiPRAA1cJQ0YHWE/view?usp=sharing"
                         target="_blank"> masters dissertation</a> revealed weak relationships between
-                    hierarchical structure in the road network of Europe and human geography:</p>
+                    hierarchical structure in the road network of Europe and human geography.</p>
 
-                <p>I <a href="https://sunny-netizen.github.io/osmnxdemo/">extracted</a> OpenStreetMap data as a network
-                    graph
-                    to conduct <a href="https://sunny-netizen.github.io/portfolio/html/london.html"
-                        target="_blank">percolation analysis</a>,
-                    then modelled the nested relationships of percolation clusters as a
+                <p>Here are examples for <a href="https://sunny-netizen.github.io/osmnxdemo/">extracting</a> 
+                    OpenStreetMap data as a network graph to conduct 
+                    <a href="https://sunny-netizen.github.io/portfolio/html/london.html"
+                        target="_blank">percolation analysis</a>
+                    and modelling nested relationships of percolation clusters as a
                     <a href="https://sunny-netizen.github.io/portfolio/html/tree.html" target="_blank">hierarchical
                         tree</a> for phenetic analysis.
                 </p>
@@ -59,21 +59,21 @@
 
             </article>
             <article>
-                <h3>Climate Resilience and Sustainability</h3>
+                <h3>Resilience and Sustainability</h3>
                 <img src="green.png" alt="Sustainability Video.">
-                <figcaption><i>Mapbox visualization of the Ballona Creek Watershed.</i></figcaption>
+                <figcaption><i>Ballona Creek Watershed and Culver City.</i></figcaption>
                 <!--<p>Ballona Creek is a channelized waterway running through
                     southwestern Los Angeles County into the Pacific Ocean.</p>-->
-                <p>As a CivicSpark Fellow with the City of Culver City, I built capacity for the
-                    <a href="https://drive.google.com/file/d/1CUIFNosLYTTdVv5Hyr336JDj4J1zbEHc/view?usp=drive_link"
+                <p>As a Resource Management Fellow with the City of Culver City, I built capacity for the
+                    <a href="https://drive.google.com/file/d/1CUIFNosLYTTdVv5Hyr336JDj4J1zbEHc/view?usp=sharing"
                         target="_blank">Ballona Creek Revitalization Project</a> and a City Ban On Single-Use Plastics.
-                    I have since <a href="https://infogr8.com/sunny-zhao-local-governments-climate-action/"
-                        target="_blank">written</a> about data and climate action in local government.
+                    I also <a href="https://infogr8.com/sunny-zhao-local-governments-climate-action/"
+                        target="_blank">wrote</a> about data and climate action in local government.
                 </p>
 
                 <p>Joining the Advisory Council of Ballona Creek Renaissance,
                     I created an Esri ArcGIS <a href="https://arcg.is/08iCWq" target="_blank">StoryMap</a>
-                    for outreach and developed a <a href="sunny-netizen.github.io/Watershed/">map animation</a> for an
+                    for outreach and developed a <a href="https://sunny-netizen.github.io/Watershed/" target="_blank">map animation</a> for an
                     <a href="https://www.ccusd.org/apps/video/watch.jsp?v=356882" target="_blank">educational video</a>.</p>
             </article>
             <article>
@@ -106,17 +106,18 @@
         <h2>Skills</h2>
         <hr>
         <p>Code: Python, R, SQL, JavaScript, D3 JS, Mapbox GL JS</p>
-        <p>Software: Esri ArcGIS GIS Pro, QGIS, Tableau</p>
+        <p>Software: QGIS, ArcGIS Pro, Tableau</p>
         <p>Spatial Analysis: Point Pattern Analysis, Spatial Autocorrelation, Spatial Regression,
             Multi-Spectral Imagery</p>
-        <p>Statistical Analysis: Multiple Regression, Machine Learning, Hypothesis Testing</p>
+        <p>Statistical Analysis: Multiple Regression, Inferential Statistics</p>
+        <p>Machine Learning: Classification, Regression, Clustering, Percolation Analysis, Dimensionality Reduction </p>
         <p>Complex Systems Modelling: Graph Networks, Agent-Based Modelling</p>
     </footer>
     <footer>
         <h2>Education</h2>
         <hr>
-        <p>MSc Spatial Data Science and Visualization, University College London</p>
-        <p>BA Anthropology, Grinnell College</p>
+        <p>MSc, Spatial Data Science and Visualization, University College London, 2023</p>
+        <p>BA, Anthropology, Grinnell College, 2018</p>
     </footer>
 </body>
 
