--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
     <footer>
         <h2>Education</h2>
         <hr>
-        <p>MSc, Spatial Data Science and Visualization, University College London, 2023</p>
+        <p>MSc, Spatial Data Science and Visualization, University College London, 2023.
+            Samples of <a href="https://github.com/sunny-netizen/MSc_SDSV">coursework</a>.</p>
         <p>BA, Anthropology, Grinnell College, 2018</p>
     </footer>
 </body>
