--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
         <div class="logo">
             <figure>
                 <img src="sunlogo.png" alt="OSM Extraction." style="width: 100%;">
-                <figcaption style="font-size: xx-small; padding-left: 2em; color: yellow">SunCloud<br>TM</figcaption>
+                <!--<figcaption style="font-size: xx-small; padding-left: 2em; color: yellow">SunCloud<br>TM</figcaption>-->
             </figure>
             <div class="name">
                 <h1>Sunny Yun Zhao</h1>
-                <h2 style="margin-top: -0.5em;">GIS & Data Analyst</h3>
+                <p style="margin-top: -0.5em;">GIS & Data Analyst</h3>
             </div>
         </div>
         <div class="contact">
             <a href="https://github.com/sunny-netizen" target="_blank" rel="noopener noreferrer">
-                <i class="fa fa-github"></i></a>
+                <i class="fa fa-github"></i></a> 
             <a href="mailto:sunny.yun.zhao@gmail.com" target="_blank" rel="noopener noreferrer">
                 <i class="fa-regular fa-envelope"></i></a>
         </div>
@@ -30,10 +30,10 @@
     <main>
         <h2>Projects</h2>
         <hr>
-        <p>Click <span class="legend">links</span> and <a href=""><i class="fa-solid fa-code"></i></a>
+        <!--<p>Click <span class="legend">links</span> and <a href=""><i class="fa-solid fa-code"></i></a>
             to explore visualizations and code. Hover over
             <i class="fa-solid fa-circle-info"></i> for details.
-        </p><br>
+        </p><br>-->
         <section>
             <article>
                 <h3>Cities and Road Networks</h3>
@@ -44,7 +44,7 @@
                 <i class="fa-solid fa-code"></i> 
             <i class="fa-solid fa-circle-info"></i>-->
                 <p> My <a href="https://drive.google.com/file/d/1-b3OS6ndkVY3ApoPFUiPRAA1cJQ0YHWE/view?usp=sharing"
-                        target="_blank"> masters dissertation</a> revealed weak relationships between
+                        target="_blank"> masters dissertation</a> assessed relationships between
                     hierarchical structure in the road network of Europe and human geography.</p>
 
                 <p>Here are examples for <a href="https://sunny-netizen.github.io/osmnxdemo/">extracting</a> 
@@ -101,6 +101,7 @@
             <article></article>
         </section>
     </main>
+    <!--
     <footer>
         <br><br>
         <h2>Skills</h2>
@@ -120,6 +121,7 @@
             Samples of <a href="https://github.com/sunny-netizen/MSc_SDSV">coursework</a>.</p>
         <p>BA, Anthropology, Grinnell College, 2018</p>
     </footer>
+    -->
 </body>
 
 </html>
