--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class="contact">
-            <a href="https://github.com/sunny-netizen" target="_blank" rel="noopener noreferrer">
+            <a href="https://github.com/sunny-netizen/" target="_blank" rel="noopener noreferrer">
                 <i class="fa fa-github"></i></a> 
             <a href="mailto:sunny.yun.zhao@gmail.com" target="_blank" rel="noopener noreferrer">
                 <i class="fa-regular fa-envelope"></i></a>
@@ -72,7 +72,7 @@
                 </p>
 
                 <p>Joining the Advisory Council of Ballona Creek Renaissance,
-                    I created an Esri ArcGIS <a href="https://arcg.is/08iCWq" target="_blank">StoryMap</a>
+                    I created an Esri ArcGIS <a href="https://arcg.is/08iCWq/" target="_blank">StoryMap</a>
                     for outreach and developed a <a href="https://sunny-netizen.github.io/Watershed/" target="_blank">map animation</a> for an
                     <a href="https://www.ccusd.org/apps/video/watch.jsp?v=356882" target="_blank">educational video</a>.</p>
             </article>
